[gd_scene load_steps=14 format=3 uid="uid://cob3g4ragg1hn"]

[ext_resource type="Script" uid="uid://r1hjqjuaxvo8" path="res://Interactables/TreasureChest/treasure_chest.gd" id="1_e0gtp"]
[ext_resource type="Texture2D" uid="uid://0mf1e5vvc5w4" path="res://Interactables/TreasureChest/treasure-chest.png" id="2_km1n8"]
[ext_resource type="Texture2D" uid="uid://c1f2pa6m1x2im" path="res://Items/Sprites/items.png" id="3_dhxp7"]
[ext_resource type="AudioStream" uid="uid://dmss56dppx0f2" path="res://Interactables/TreasureChest/treasure-open.wav" id="4_km1n8"]
[ext_resource type="PackedScene" uid="uid://cnv1gholpvf8d" path="res://GeneralNodes/PersistentDataHandler/persistent_data_handler.tscn" id="5_dhxp7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nceft"]
atlas = ExtResource("3_dhxp7")
region = Rect2(0, 0, 32, 32)

[sub_resource type="Animation" id="Animation_nceft"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ItemSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ItemSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -10)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ItemSprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_dhxp7"]
resource_name = "closed"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ItemSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_1voch"]
resource_name = "open_chest"
length = 1.55
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ItemSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_km1n8")
}],
"times": PackedFloat32Array(0.1)
}
tracks/2/use_blend = true
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ItemSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.3001, 0.5, 1.5),
"transitions": PackedFloat32Array(0.5, -2, 2, 1),
"update": 0,
"values": [Vector2(0, -10), Vector2(0, -64), Vector2(0, -48), Vector2(0, -48)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ItemSprite:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.2, 0.3, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(2, 2, 2, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_7sfce"]
resource_name = "opened"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ItemSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wv624"]
_data = {
&"RESET": SubResource("Animation_nceft"),
&"closed": SubResource("Animation_dhxp7"),
&"open_chest": SubResource("Animation_1voch"),
&"opened": SubResource("Animation_7sfce")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e0gtp"]
size = Vector2(32, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_km1n8"]
size = Vector2(36, 20)

[node name="TreasureChest" type="Node2D"]
process_mode = 3
script = ExtResource("1_e0gtp")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -10)
texture = ExtResource("2_km1n8")
hframes = 2

[node name="ItemSprite" type="Sprite2D" parent="."]
position = Vector2(0, -10)
texture = SubResource("AtlasTexture_nceft")

[node name="Label" type="Label" parent="ItemSprite"]
offset_left = 12.0
offset_top = -12.0
offset_right = 52.0
offset_bottom = 11.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 10
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_wv624")
}
autoplay = "closed"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 5.5)
shape = SubResource("RectangleShape2D_e0gtp")

[node name="InteractArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea2D"]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_km1n8")
debug_color = Color(0, 0.6, 0, 0.262745)

[node name="PersistentDataIsOpen" parent="." instance=ExtResource("5_dhxp7")]
